--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
   "name": "mindfk",
   "version": "1.0.0",
-  "private": true,
   "description": "Mind Fk web application",
   "author": "Mayank Meghwanshi",
   "license": "MIT",
   "main": "app.js",
-  "dependencies": {
-    "body-parser": "~1.8.1",
+  "dependencies": 
+  {
     "config": "^1.5.0",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.0.0",
-    "elasticsearch": "^3.0.0",
     "express": "~4.9.0",
     "express-session": "^1.9.1",
     "hbs": "~2.7.0",
     "lodash": "^2.4.1",
-    "moment": "^2.8.3",
-    "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "socket.io": "^1.1.0"
-  }
+  },
+
+  "scripts": 
+  {
+    "start": "node index.js"
+  },
+
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mayank127/MindFk"
+  },
+
+  "keywords": [
+    "node",
+    "card",
+    "mindfk",
+    "literature"
+  ]
+
 }
